--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -61,3 +61,15 @@
         command: "{{ default_container_command }}"
         state: present
       with_sequence: count={{ container_count }}
+
+    - name: Create directory for docker CLI plugins
+      shell: mkdir -p ~/.docker/cli-plugins/
+
+    - name: Download and install docker-compose
+      shell: >
+        curl -SL https://github.com/docker/compose/releases/download/v2.3.3/docker-compose-linux-x86_64 
+        -o ~/.docker/cli-plugins/docker-compose && 
+        chmod +x ~/.docker/cli-plugins/docker-compose
+
+    - name: Run docker-compose up
+      shell: docker compose up -d
