--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -70,10 +70,15 @@
         curl -SL https://github.com/docker/compose/releases/download/v2.3.3/docker-compose-linux-x86_64 
         -o ~/.docker/cli-plugins/docker-compose && 
         chmod +x ~/.docker/cli-plugins/docker-compose
-
+        
+    - name: Create directory for Web App
+      shell: mkdir -p /home/WebApp/
+      
     - name: Clone Docker Compose repository on Slave
       become: yes
       git:
         repo: https://github.com/Adlaniq/dev_monorail.git
+        dest: /home/WebApp/
+
         clone: yes
 
