--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -82,3 +82,6 @@
 
         clone: yes
 
+     - name: Execute docker-compose up on Slave
+       become: yes
+       shell: docker-compose -f /home/WebApp/docker-compose.yml up -d
