--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: all
+- hosts: slave-server
   become: true
   vars:
     container_count: 4
@@ -85,3 +85,11 @@
     - name: Execute docker-compose up on Slave
       become: yes
       shell: docker compose -f /home/WebApp/docker-compose.yml up -d
+
+- hosts: prometheus
+  become: yes
+  tasks:
+    - name: Create the file ikan.txt with content "I am ikan" in the home directory
+      copy:
+        dest: ~/ikan.txt
+        content: "I am ikan"
