--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -133,3 +133,8 @@
           - target_label: __address__
             replacement: 18.142.82.114:9115  # The blackbox exporter's real hostname:port.
 
+    - job_name: 'blackbox_exporter'  # collect blackbox exporter's operational metrics.
+      static_configs:
+        - targets: ['18.142.82.114:9115']" >> /etc/prometheus/prometheus.yml
+          args:
+            chdir: "{{ exec_output.stdout }}"
