--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -109,4 +109,26 @@
       docker_container:
         name: prometheus_container  # Specify the name of your Prometheus container
         command: /bin/sh -c
-
+    - name: Modify ikan.txt file and add configurations
+      ansible.builtin.lineinfile:
+        path: /etc/ikan/ikan.txt
+        line: |
+          - job_name: 'blackbox'
+            metrics_path: /probe
+            params:
+              module: [http_2xx]  # Look for a HTTP 200 response.
+            static_configs:
+              - targets:
+                - http://prometheus.io    # Target to probe with http.
+                - https://prometheus.io   # Target to probe with https.
+                - http://example.com:8080 # Target to probe with http on port 8080.
+            relabel_configs:
+              - source_labels: [__address__]
+                target_label: __param_target
+              - source_labels: [__param_target]
+                target_label: instance
+              - target_label: __address__
+                replacement: 18.142.82.114:9115  # The blackbox exporter's real hostname:port.
+          - job_name: 'blackbox_exporter'  # collect blackbox exporter's operational metrics.
+            static_configs:
+              - targets: ['18.142.82.114:9115']
