--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -97,6 +97,8 @@
     - name: Execute docker-compose up on Slave
       become: yes
       shell: docker compose -f /home/WebApp/docker-compose.yml up -d
+      args:
+        chdir: /home/WebApp/
 
 - hosts: prometheus
   become: yes
