--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,44 @@
 version: '3.8'
 
 services:
-  db: 
+  db:
     image: mysql:latest
     environment:
       - MYSQL_DATABASE=monoraildb
       - MYSQL_USER=php_docker
-      - MYSQL_PASSWORD=password # this should live in a env var
-      - MYSQL_ALLOW_EMPTY_PASSWORD=1 # equivalent to True
+      - MYSQL_PASSWORD=password
+      - MYSQL_ROOT_PASSWORD=rootpassword # Root password for setup
     volumes:
-      - "./db:/docker-entrypoint-initdb.d" # this is how we persist a sql db even when container stops
+      - "./db:/docker-entrypoint-initdb.d"
+    ports:
+      - "3306:3306" # Expose MySQL port to the host for debugging purposes
+
   www:
     image: php:apache
     volumes:
-      - "./:/var/www/html" # sync the current dir on local machine to the dir of container
+      - "./:/var/www/html"
     ports:
-      - 80:80
-      - 443:443 # for future ssl traffic
+      - "80:80"
+      - "443:443"
     entrypoint: /bin/sh -c "docker-php-ext-install mysqli && apache2-foreground"
+    depends_on:
+      - db
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     ports:
-      - 8001:80
+      - "8001:80"
     environment:
       - PMA_HOST=db
       - PMA_PORT=3306
-    
+
+  db_init:
+    image: mysql:latest
+    environment:
+      - MYSQL_ROOT_PASSWORD=rootpassword
+    volumes:
+      - "./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql"
+    depends_on:
+      - db
+    entrypoint: ["sh", "-c", "sleep 30 && mysql -h db -uroot -prootpassword < /docker-entrypoint-initdb.d/init-db.sql && touch /docker-entrypoint-initdb.d/init-db.sql.done"]
+    # `sleep 30` is to wait until the db service is up and running
