--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,25 +4,31 @@ services:
   db: 
     image: mysql:latest
     environment:
-      - MYSQL_DATABASE=monoraildb
-      - MYSQL_USER=php_docker
-      - MYSQL_PASSWORD=password 
-      - MYSQL_ALLOW_EMPTY_PASSWORD=1 
+      MYSQL_DATABASE: monoraildb
+      MYSQL_USER: php_docker
+      MYSQL_PASSWORD: password 
+      MYSQL_ALLOW_EMPTY_PASSWORD: "1"
     volumes:
-      - "./db:/docker-entrypoint-initdb.d" 
+      - "/Users/adlaniq/ansible_project/db/db:/docker-entrypoint-initdb.d"
+    ports:
+      - "3306:3306"  # Expose MySQL port
+
   www:
-    image: php:apache
+    image: php:7.4-apache  # Specify a version for consistency
     volumes:
       - "./:/var/www/html"
     ports:
-      - 80:80
-      - 443:443
+      - "80:80"
+    depends_on:
+      - db
     entrypoint: /bin/sh -c "docker-php-ext-install mysqli && apache2-foreground"
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     ports:
-      - 8001:80
+      - "8001:80"
     environment:
-      - PMA_HOST=db
-      - PMA_PORT=3306
+      PMA_HOST: db
+      PMA_PORT: 3306
+    depends_on:
+      - db
