--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,17 @@
 version: '3.8'
 
 services:
-  db: 
+  db:
     image: mysql:latest
     environment:
-      - MYSQL_DATABASE=monoraildb
-      - MYSQL_USER=php_docker
-      - MYSQL_PASSWORD=password # this should live in a env var
-      - MYSQL_ALLOW_EMPTY_PASSWORD=1 # equivalent to True
+      MYSQL_ROOT_PASSWORD: root_password
+      MYSQL_DATABASE: monoraildb
+      MYSQL_USER: php_docker
+      MYSQL_PASSWORD: password # this should live in a env var
+      MYSQL_ALLOW_EMPTY_PASSWORD: 1 # equivalent to True
     volumes:
       - "./db:/docker-entrypoint-initdb.d" # this is how we persist a sql db even when container stops
+
   www:
     image: php:apache
     volumes:
