--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -100,4 +100,33 @@
       args:
         chdir: /home/WebApp/
 
+- hosts: prometheus
+  become: yes
+  tasks:
+    - name: Pull Prometheus image
+      docker_image:
+        name: prom/prometheus
+        source: pull
 
+    - name: Run Prometheus container
+      docker_container:
+        name: prometheus_container
+        image: prom/prometheus
+        state: started
+        restart_policy: always
+        ports:
+          - "9090:9090"
+
+    - name: Pull the Grafana Docker image
+      docker_image:
+        name: grafana/grafana
+        source: pull
+
+    - name: Run Grafana container
+      docker_container:
+        name: grafana
+        image: grafana/grafana
+        state: started
+        ports:
+          - "3000:3000"
+        restart_policy: unless-stopped
