--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -130,3 +130,19 @@
         ports:
           - "3000:3000"
         restart_policy: unless-stopped
+
+            - name: Download blackbox_exporter tarball
+      get_url:
+        url: "https://github.com/prometheus/blackbox_exporter/releases/download/v0.25.0/blackbox_exporter-0.25.0.linux-amd64.tar.gz"
+        dest: "/home/blackbox_exporter-0.25.0.linux-amd64.tar.gz"
+      
+    - name: Extract blackbox_exporter tarball
+      ansible.builtin.unarchive:
+        src: "/tmp/blackbox_exporter-0.25.0.linux-amd64.tar.gz"
+        dest: "/home/"
+        remote_src: yes
+        
+    - name: Run blackbox_exporter Docker container
+      ansible.builtin.shell:
+        cmd: "docker run --rm -p 9115:9115/tcp --name blackbox_exporter -v $(pwd):/config quay.io/prometheus/blackbox-exporter:latest --config.file=/config/blackbox.yml"
+        chdir: "/opt/blackbox_exporter-0.25.0.linux-amd64" 
