--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -151,7 +151,7 @@
     - name: Run blackbox_exporter Docker container
       ansible.builtin.shell:
         cmd: "docker run -d -p 9115:9115/tcp --name blackbox_exporter -v $(pwd):/config quay.io/prometheus/blackbox-exporter:latest --config.file=/config/blackbox.yml"
-        chdir: "/home/blackbox_exporter"  # Change directory to where blackbox_exporter is installed
+        chdir: "/home/blackbox_exporter-0.25.0.linux-amd64"  # Change directory to where blackbox_exporter is installed
 
     - name: Verify blackbox_exporter is running
       ansible.builtin.shell:
