--- a/Prometheus/prometheus.yml
+++ b/Prometheus/prometheus.yml
@@ -44,7 +44,7 @@ scrape_configs:
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
-        replacement: 18.142.82.114:9115  # The blackbox exporter's real hostname:port.
+        replacement: 52.76.29.39:9115  # The blackbox exporter's real hostname:port.
   - job_name: 'blackbox_exporter'  # collect blackbox exporter's operational metrics.
     static_configs:
-      - targets: ['18.142.82.114:9115']
+      - targets: ['52.220.48.251/dev_monorail', '52.220.48.251:8001']
