--- a/Prometheus/prometheus.yml
+++ b/Prometheus/prometheus.yml
@@ -47,4 +47,4 @@ scrape_configs:
         replacement: 52.76.29.39:9115  # The blackbox exporter's real hostname:port.
   - job_name: 'blackbox_exporter'  # collect blackbox exporter's operational metrics.
     static_configs:
-      - targets: ['52.220.48.251/dev_monorail', '52.220.48.251:8001']
+      - targets: ['52.76.29.39:9115']
